apps/discourse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: discourse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:11
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: discourse-postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: discourse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: docker.io/bitnami/redis:7.0
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /bitnami/redis
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: discourse-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discourse
  namespace: discourse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: discourse
  template:
    metadata:
      labels:
        app: discourse
    spec:
      containers:
        - name: discourse
          image: docker.io/bitnami/discourse:2
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /bitnami/discourse
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: discourse-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: discourse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
        - name: sidekiq
          image: docker.io/bitnami/discourse:2
          command:
            - /opt/bitnami/scripts/discourse-sidekiq/run.sh
          volumeMounts:
            - name: data
              mountPath: /bitnami/discourse
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: discourse-sidekiq
