apps/discourse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: discourse
spec:
  selector:
    app: postgresql
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: discourse
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: discourse
  namespace: discourse
spec:
  selector:
    app: discourse
  ports:
    - name: http
      port: 3000
      targetPort: 3000
